Add IssuanceController and fix security config for issuances API